Integrated html, started auth users

--- a/tindartapp/templates/tindartapp/index.html
+++ b/tindartapp/templates/tindartapp/index.html
@@ -1,9 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>TindArt</title>
-        <link href="C:\Users\vwei\Desktop\TigerHacks2019\style.css" rel="stylesheet">
+        <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static 'tindartapp/style.css' %}" />
     </head>
 
     <body>
@@ -14,32 +17,40 @@
         <body>
             <main>
                 <div class="intro">
+                    {% if user.is_authenticated %}
+                      Hi {{ user.username }}!
+                    {% else %}
+                      <p>You are not logged in</p>
+                      <a href="{% url 'login' %}">login</a>
+                    {% endif %}
+                 </div>
+                <div class="intro">
                     <h2>Tinder for Artists</h2>
                     <p>TindaArt is a way to connect artists and art-lovers all around the world.</p>
                 </div>
 
                 <div class="button">
-                    <a class="btn btn-primary" href="C:\Users\vwei\Desktop\TigerHacks2019\artLover.html" role="button">I'm an Art Lover</a>
-                    <a class="btn btn-primary" href="#" role="button">I'm an Artist</a>
+                    <a class="btn btn-primary" href="{% url 'user' %}" role="button">I'm an Art Lover</a>
+                    <a class="btn btn-primary" href="artist" role="button">I'm an Artist</a>
                 </div>
 
                 <div class="slideshow-container">
 
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 3</div>
-                        <img src="C:\Users\vwei\Desktop\TigerHacks2019\images\abstract.jpg" style="width:100%">
+                        <img src="{% static 'tindartapp/images/abstract.jpg' %}" style="width:100%">
                         <div class="text">Steve Johnson</div>
                     </div>
                         
                     <div class="mySlides fade">
                       <div class="numbertext">2 / 3</div>
-                      <img src="C:\Users\vwei\Desktop\TigerHacks2019\images\mountains.jpg" style="width:100%">
+                      <img src="{% static 'tindartapp/images/mountains.jpg' %}" style="width:100%">
                       <div class="text">Roberto Shumski</div>
                     </div>
                         
                     <div class="mySlides fade">
                       <div class="numbertext">3 / 3</div>
-                      <img src="C:\Users\vwei\Desktop\TigerHacks2019\images\scenic-view.jpg" style="width:100%">
+                      <img src="{% static 'tindartapp/images/scenic-view.jpg' %}" style="width:100%">
                       <div class="text">Stephen Seeber</div>
                     </div>
                         
