--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,40 @@
+{% load static %}
+
+<html>
+<head>
+        <title>TindArt</title>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static 'tindartapp/style.css' %}" />
+    </head>
+<body>
+<div class='intro'>
+	<img src="{% static 'tindartapp/images/logo.png' %}" style="width:100%">
+</div>
+<div class='intro'>
 <h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
+<form method="post" id='loginform'>
+	{% csrf_token %}
+    {{ form.non_field_errors }}
+    <div class="fieldWrapper">
+        {{ form.username.errors }}
+        <label for="{{ form.username.id_for_label }}">Username:</label>
+        <div>
+        	{{ form.username }}
+    	</div>
+    </div>
+    <div class="fieldWrapper">
+        {{ form.password.errors }}
+        <label for="{{ form.password.id_for_label }}">Password:</label>
+        <div>
+        	{{ form.password }}
+        </div>
+    </div>
 </form>
+<div class='penis'>
+    	<button class='btn btn-primary' type="submit" form='loginform'>Login</button>
+ </div>
+</div>
+</body>
+</html>
