--- a/tindartapp/templates/tindartapp/index.html
+++ b/tindartapp/templates/tindartapp/index.html
@@ -48,12 +48,12 @@
                  </div>
                 <div class="intro">
                     <h2>Tinder for Artists</h2>
-                    <p>TindaArt is a way to connect artists and art-lovers all around the world.</p>
+                    <p>TindArt is a way to connect artists and art-lovers all around the world.</p>
                 </div>
 
                 <div class="button">
-                    <a class="btn btn-primary" href="{% url 'user' %}" role="button">I'm an Art Lover</a>
-                    <a class="btn btn-primary" href="artist" role="button">I'm an Artist</a>
+                    <a class="btn btn-primary" href="{% url 'signup' %}" role="button">Sign Up</a>
+                    <a class="btn btn-primary" href="{% url 'login' %}" role="button">Log In</a>
                 </div>
 
                 <div class="slideshow-container">
