user/art fk relationship

--- a/tindartapp/static/tindartapp/style.css
+++ b/tindartapp/static/tindartapp/style.css
@@ -140,3 +140,13 @@ img {vertical-align: middle;}
 .penis {
   padding-top: 20px;
 }
+
+.header {
+  margin-bottom: 50%;
+  color: white;
+}
+
+.imgform {
+  margin-left: 20%;
+  margin-bottom: 15%;
+}
