--- a/tindartapp/templates/tindartapp/artform.html
+++ b/tindartapp/templates/tindartapp/artform.html
@@ -1,5 +1,22 @@
-<form method = "post" enctype="multipart/form-data"> 
-        {% csrf_token %} 
-        {{ form.as_p }} 
-        <button type="submit">Upload</button> 
-</form> 
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>TindArt</title>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static 'tindartapp/style.css' %}" />
+    </head>
+<body style='background-image: url("{% static "tindartapp/images/backgroundimg.jpg" %}")'>
+	<div class='intro'>
+		<h1 class='header'>Upload your art!</h1>
+		<form class='imgform' method = "post" enctype="multipart/form-data" id="imgform"> 
+		        {% csrf_token %} 
+		        {{ form.as_p }} 
+		</form>
+		<button class='btn btn-primary' type="submit" form='imgform'>Upload</button>
+		<a class="nav-link" href="{% url 'homepage' %}">Go Back</a>
+	</div>
+</body>
+</html>
