--- a/tindartapp/templates/tindartapp/artform.html
+++ b/tindartapp/templates/tindartapp/artform.html
@@ -16,7 +16,7 @@
 		        {{ form.as_p }} 
 		</form>
 		<button class='btn btn-primary' type="submit" form='imgform'>Upload</button>
-		<a class="nav-link" href="{% url 'homepage' %}">Go Back</a>
+		<a class="nav-link" href="{% url 'login' %}">Go Back</a>
 	</div>
 </body>
 </html>
